--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "json-server server.json -p 3333 -w -d 500",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -23,6 +24,7 @@
     "@viniciusmendite/eslint-config": "^1.0.1",
     "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.31.0",
+    "json-server": "^0.17.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
